<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>max</groupId>
  <artifactId>PathIndex</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>PathIndex</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <inceptionYear>2015</inceptionYear >
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.7</version>
      <scope>test</scope>
    </dependency>
      <dependency>
          <groupId>org.neo4j</groupId>
          <artifactId>neo4j</artifactId>
          <version>2.3.0-M01</version>
      </dependency>
      <dependency>
          <groupId>net.jpountz.lz4</groupId>
          <artifactId>lz4</artifactId>
          <version>1.3.0</version>
      </dependency>
  </dependencies>
    <licenses>
        <license>
            <name>GNU General Public License (GPL)</name>
            <url>http://www.gnu.org/licenses/gpl.txt</url>
        </license>
    </licenses>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.4.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <executable>java</executable>
                    <mainClass>NeoIntegration.Runner</mainClass>
                    <arguments>
                        <argument>-Xmx2G -Xms2G</argument>
                        <argument>-XX:+UseFastAccessorMethods</argument>
                        <argument>-XX:+DisableExplicitGC</argument>
                        <argument>-XX:+UseConcMarkSweepGC</argument>
                        <argument>-XX:+UseNUMA</argument>
                        <argument>-XX:+CMSParallelRemarkEnabled</argument>
                        <argument>-XX:MaxTenuringThreshold=15</argument>
                        <argument>-XX:MaxGCPauseMillis=30</argument>
                        <argument>-XX:GCPauseIntervalMillis=150</argument>
                        <argument>-XX:+UseAdaptiveGCBoundary</argument>
                        <argument>-XX:-UseGCOverheadLimit</argument>
                        <argument>-XX:+UseBiasedLocking</argument>
                        <argument>-XX:SurvivorRatio=8</argument>
                        <argument>-XX:TargetSurvivorRatio=90</argument>
                        <argument>-XX:MaxTenuringThreshold=15</argument>
                        <argument>-XX:+UseCompressedOops</argument>
                    </arguments>
                    <cleanupDaemonThreads>false</cleanupDaemonThreads>
                </configuration>
            </plugin>
            <!-- Creating current year element -->
            <plugin>
                <groupId>org.codehaus.groovy.maven</groupId>
                <artifactId>gmaven-plugin</artifactId>
                <version>1.0</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>execute</goal>
                        </goals>
                        <configuration>
                            <source>
                                import java.util.Date
                                import java.text.MessageFormat
                                def vartimestamp = MessageFormat.format("{0,date,yyyy}", new Date())
                                project.properties['currentYear'] = vartimestamp
                            </source>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- Adding header to file -->
            <plugin>
                <groupId>com.mycila.maven-license-plugin</groupId>
                <artifactId>maven-license-plugin</artifactId>
                <version>1.8.0</version>
                <configuration>
                    <!-- Template location -->
                    <header>src/main/resources/fileHeader.txt</header>
                    <properties>
                        <!-- Values to be substituted in template -->
                        <h_inceptionYear>${inceptionYear}</h_inceptionYear>
                        <h_currentYear>${currentYear}</h_currentYear>
                        <h_copyrightOwner>${copyrightOwner}</h_copyrightOwner>
                        <h_projectName>${project.artifactId}</h_projectName>
                    </properties>
                    <strictCheck>true</strictCheck>
                    <excludes>
                        <exclude>**/*.html</exclude>
                        <exclude>**/*.xml</exclude>
                        <exclude>**/*.txt</exclude>
                        <exclude>**/*.ec</exclude>
                        <exclude>**/*.log</exclude>
                        <exclude>**/*.css</exclude>
                        <exclude>**/*.js</exclude>
                        <exclude>**/*.jsp</exclude>
                        <exclude>**/*.md</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
